force-app/main/default/objects/SensorAggregate__c/SensorAggregate__c.object-meta.xml
<CustomObject>
    <label>SensorAggregate</label>
    <nameField>
        <displayFormat>SAG-{00000}</displayFormat>
        <label>SensorAggregate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SensorAggregates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>