force-app/main/default/objects/SensorAggregate__c/fields/AverageValue__c.field-meta.xml
<CustomField>
    <fullName>AverageValue__c</fullName>
    <label>AverageValue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>