force-app/main/default/objects/SensorAggregate__c/fields/MaxDateTime__c.field-meta.xml
<CustomField>
    <fullName>MaxDateTime__c</fullName>
    <label>MaxDateTime</label>
    <type>DateTime</type>
</CustomField>