force-app/main/default/objects/SensorAggregate__c/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName>
    <label>MaxValue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>