force-app/main/default/objects/SensorAggregate__c/fields/MinDateTime__c.field-meta.xml
<CustomField>
    <fullName>MinDateTime__c</fullName>
    <label>MinDateTime</label>
    <type>DateTime</type>
</CustomField>