force-app/main/default/objects/SensorAggregate__c/fields/SensorId__c.field-meta.xml
<CustomField>
    <fullName>SensorId__c</fullName>
    <label>SensorId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>